Fix bg not stretching

--- a/less/components/app.less
+++ b/less/components/app.less
@@ -8,7 +8,7 @@ body {
     background-color: @color-black;
     background-image: linear-gradient( 180deg, @color-black 20%, @color-grey 100%);
     &::before {
-        position: absolute;
+        position: fixed;
         content: '';
         top: 0;
         right: 0;
